# s3dvami

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: aabb.h  application.h  bounding_box.h  camera.h  config.h  mesh.h  model.h  node.h
include/descriptions/: mesh.h  mesh_description.h  meshes.h  meshes_description.h  model.h  model_description.h  node.h
include/model/: material.h  material_mgr.h  mesh.h  mesh_mgr.h  model.h  node.h  node_mgr.h  texture.h  texture_mgr.h  vertex.h
include/objects/: aabb.h  axes.h  floor_plate.h
include/shaders/: model_frag.h  model_vert.h  shader.h  simple_frag.h  simple_vert.h
include/windows/: dlg_open_file.h  menu_bar_main.h  menu_main.h  model_description.h  msg_choose_file.h  wnd_model_description.h
src/: aabb.cpp  application.cpp  bounding_box.cpp  camera.cpp  main.cpp  mesh.cpp  model.cpp  node.cpp  texture.cpp
src/model/: material.cpp  material_mgr.cpp  mesh.cpp  mesh_mgr.cpp  model.cpp  node.cpp  node_mgr.cpp  texture.cpp  texture_mgr.cpp
src/objects/: aabb.cpp  axes.cpp  floor_plate.cpp
src/shaders/: shader.cpp
src/windows/: dlg_open_file.cpp  menu_bar_main.cpp  menu_main.cpp  model_description.cpp  msg_choose_file.cpp  wnd_model_description.cpp
